--- a/templates/cart.html
+++ b/templates/cart.html
@@ -20,7 +20,9 @@
 						<th><h5>Items: <strong>{{pedido.get_numero_items}}</strong></h5></th>
 						<th><h5>Total:<strong> {{pedido.get_total|floatformat:2}} €</strong></h5></th>
 						<th>
-							<a  style="float:right; margin:5px; width:220px;" class="btn   btnAdd" href="{% url 'checkout' %}">Finalizar Compra</a>
+							{% if pedido.pedido_pago is False and pedido.get_numero_items > 0  %} 
+							<a  style="float:right; margin:5px; width:220px;" class="btn   btnAdd" href="{% url 'checkout' %}">Finalizar Compra</a> 
+							{% endif %}
 						</th>
 					</tr>
 				</table>
