Reset Password Designs and Functionality updated

--- a/templates/delivery_crew.html
+++ b/templates/delivery_crew.html
@@ -103,6 +103,30 @@
                         <td style="padding-top: 25px;"> <a  style="width:250px;" class="btn btnAdd delivery" data-item={{pedido.id}} data-action="entregar" >Efetuar Entrega Pedido</a></td>
                         <td style="padding-top: 25px;"><img class="avatar avatar--xxs" src="{%  static profile.profile_imagem.url %}" alt=""></td>
                         <td style="padding-top: 25px;">você é o entregador deste pedido</td>
+                          {% if pedido.itempedido_set.all  %}
+                              <div class="cart-row">
+                                <div style="flex:1"><b class="corPrincipal">Imagem</b></div>
+                                <div style="flex:1"><p><b class="corPrincipal">Item</b></p></div>
+                                <div style="flex:1"><p><b class="corPrincipal">Preço</b></p></div>
+                                <div style="flex:1"><p><b class="corPrincipal">Quantidade</b></p></div>
+                                <div style="flex:1"><p><b class="corPrincipal">Restaurante</b></p></div>
+                            </div>
+                            {% for item in pedido.itempedido_set.all %}
+                                <div class="cart-row">
+                                    <div style="flex:1"><img class="row-image-checkout" src="{% static item.item.imagem.url %}"></div>
+                                    <div style="flex:1"><p>{{ item.item.nome }}</p></div>
+                                    <div style="flex:1"><p>{{ item.item.preco }} €</p></div>
+                                    <div style="flex:1"><p>x{{ item.quantidade }}</p></div>
+                                    <div style="flex:1"><p>{{ item.item.restaurante }}</p></div>
+                                </div>
+                                {% endfor %}
+                                <h5>Número Pedido: {{ pedido.numero_transacao }}</h5>
+                                <h5>Número Mesa: {{ pedido.mesa }}</h5>
+                                <h5>Items: {{ pedido.get_numero_items }}</h5>
+                                <h5>Total: {{ pedido.get_total|floatformat:2 }}</h5>
+                            {% else %}
+                            <h4>Sem items</h4>
+                          {% endif %}
                         {% endif %}
                     </tr>
                     {% endfor %}
