--- a/templates/waiting_delivery.html
+++ b/templates/waiting_delivery.html
@@ -41,7 +41,7 @@
                     <div class="col-lg-4">
                         <div style="padding-top: 20px;">
                             <h5 style="color:#94395b;">Entregador:</h5>
-                            <img style="height:100px;  padding-top: 20px;" src="{%  static pedido.entregador.profile_imagem.url %}" alt="" srcset="">
+                            <img class="avatar avatar--sm" src="{%  static pedido.entregador.profile_imagem.url %}" alt="" srcset="">
                             <h5 style="padding-top: 20px;">{{ pedido.entregador }}</h5>
                         </div>
                     </div>
