--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
 {% load static %}
 <!DOCTYPE html>
 <html><head>
-	<title>Slide Navbar</title>
-	
+	<title>Mall Safe Meals</title>
+    <link rel="icon" href="{% static 'images/favicon.png' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&amp;display=swap" rel="stylesheet">
 
@@ -42,6 +42,10 @@
 					<label for="chk" style="color: #94395b;" aria-hidden="true">Entrar</label>
 					<input type="text" name="username" placeholder="Utilizador" required="">
 					<input type="password" name="pswd" placeholder="Password" required="">
+					<div class="text-center">
+						<a style="padding-left: 62px; color: #94395b;" href="{% url 'reset_password' %}">Esqueceste-te da tua password?</a>
+					</div>
+					
 					<button type="submit">Entrar</button>
 				</form>
 			
