--- a/static/css/style.css
+++ b/static/css/style.css
@@ -398,3 +398,16 @@ padding-left: 0;
     border-radius: 3px;
     text-decoration:none;
 }
+
+#cartItems{
+    font-size: 16px;
+    font-weight: 900;
+    position: relative;
+    border: solid var(--color--primary);
+    border-radius: 50%;
+    height: 14px;
+    width: 20px;
+    color: var(--color--primary);
+    background:white;
+    right: +25px;
+}
